		* src/main.c (gameOver): now handles matches that result in a draw

	header file changes
		* include/vgcp.h: updated function prototypes,
			changed the default window size to 1000x1000

2021-01-24	version 00-0002
	Made the code nicer (switched the color variable(s) to "color_t" from "bool") and made other optimizations.

	source file changes
		* (almost) all: switched color variables to "color_t",
			optimized code

	header file changes
		* inclue/vgcp.h: created new macros,
			created the "color_t" type,
			updated function prototypes

2021-02-02	version 00-0003
	Now warns user on runtime when using the _DEBUG and warns user on runtime & compilation when the _NO_PERSPECTIVE_CHANGE is disabled,
	now moves use the structure "move"

	source file changes
		* src/main.c (main): Now warns of "unwanted" options being used on runtime (_DEBUG & _NO_PERSPECTIVE_CHANGE)
		* src/main.c (handleMousebuttonEvent): Updated function call to movePiece
		* src/move.c (movePiece): updated function arguments, optimized handling of castling,
			now uses the structure "move"

	header file changes
		* include/vgcp.h: updated function prototypes,
			now warns of _NO_PERSPECTIVE_CHANGE not being enabled,
			created the structure "move"

2021-02-02	version 00-0004
	Created the "label" structure, optimized code, etc

	source file changes
		* src/init.c (loadMedia): now uses the "label" structure,
			loads the texture rectangle & background during creation and not during drawing.
		* src/draw.c (drawGameOverText): uses the "label" structure now
		* src/piece.c (mapKingPotentialMoves): optimized castling

2021-02-03	version 00-0005
	Created the move list, which currently doesn't do anything useful.
	
	source file changes
		* created a new source file src/move_list.c
		* str/move.c (movePiece): now adds to the list of moves after move

	header file changes
		* include/vgcp.h: added the move list structure, updated prototypes